# llimona-azure-openai

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/actions/publishing/: action.yaml
.github/actions/setup-repo/: action.yaml
.github/actions/versioning/: action.yaml
.github/instructions/: tests.instructions.md
.github/prompts/: explain-with-paths.prompt.md  refactor-safe.prompt.md  smart-review.prompt.md
.github/workflows/: codeql.yaml  common_get_version.yaml  common_make_release.yaml  common_push_version.yaml  manual_increase_version.yaml  manual_make_release.yaml  manual_stabilize_release.yaml  pull_request.yaml  push_code.yaml  push_release.yaml  sonnar.yaml
src/llimona_azure_openai/: __init__.py  providers.py
tests/: test_addon.py  test_providers.py
