[project]
name = "llimona-azure-openai"
version = "0.1.0"
description = "Llimona addon providing an Azure OpenAI provider integration."
readme = "README.md"
authors = [
    { name = "Alfred", email = "alfred.santacatalinagea@telefonica.com" }
]
requires-python = ">=3.14"
dependencies = [
    "llimona",
    "openai>=2.41.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
llimona = { path = "../llimona/" } 

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "poethepoet>=0.46.0",
    "pydantic-extra-types>=2.11.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_classes = ["Test*", "*Tests"]
minversion = "8.0"
addopts = ["--strict-markers", "--strict-config"]
pythonpath = ["src"]

[project.entry-points."llimona.addon"]
azure_openai = "llimona_azure_openai:addon"


[tool.ruff]
line-length = 120
target-version = "py314"
exclude = [".venv", "dist", "build"]
force-exclude = true

[tool.ruff.lint]
# Rules to enforce
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
omit = [".venv/*", "tests/**", "src/**/cli/**"]
source = ["src"]
branch = true
relative_files = false

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # Don't complain type checking imports, they aren't run:
    "if TYPE_CHECKING",

    # Don't complain overloads, they aren't run:
    "@overload"
]

[tool.coverage.paths]
source = ["src/"]
omit = [
    "src/**/cli",
    "tests",
]


[tool.poe.tasks]
build = "uv build"
test = "pytest -v -s --junitxml=pytest.xml --cov src --cov-report term-missing --cov-report xml:coverage.xml --cov-fail-under=85 --exitfirst"
typecheck = "mypy src"
format = "ruff format **/src/**/*.py **/tests/**/*.py"
"format:check" = "ruff format **/src/**/*.py **/tests/**/*.py --check"
lint = "ruff check **/src/**/*.py **/tests/**/*.py"
"lint:fix" = "ruff check **/src/**/*.py **/tests/**/*.py --fix"

[tool.poe.tasks.clean]
cmd = """
rm -rf ./**/src/**/*.pyc
       ./**/src/**/*.pyo
       ./**/src/**/__pycache__
       ./**/tests/**/*.pyc
       ./**/tests/**/*.pyo
       ./**/tests/**/__pycache__
       .coverage
       coverage.xml
       pytest.xml
       .*_cache
"""
empty_glob = "null"

[tool.poe.tasks.validate]
help = "Execute all validations: typecheck, lint, and test"
sequence = [
    "typecheck",
    "format:check",
    "lint",
    "test"
]

[tool.poe.tasks.prebuild]
help = "Pre-build checks: typecheck and lint"
sequence = [
    "typecheck", 
    "lint"
]

[tool.poe.tasks."clean:all"]
help = "Complete cleanup: cache, coverage, and temporary files"
sequence = [
    "clean",
    { cmd = """rm -rf dist
                      build
                      .coverage
                      coverage.xml
                      pytest.xml
                      **/.*_cache
            """},
]

[tool.poe.tasks.fix]
help = "Fix linting and formatting issues, then run tests"
sequence = [
    "format",
    "lint:fix",
]
